--- a/dashboard/Dockerfile.yml
+++ b/dashboard/Dockerfile.yml
@@ -17,4 +17,4 @@ COPY --from=build-stage /app/build /usr/share/nginx/html
 
 EXPOSE 3000
 
-CMD ["nginx", "-g", "daemon off;"]
+CMD ["npm", "start"]
